fix fade in to happen onload while element is already visible

--- a/app/styles/Hero.module.scss
+++ b/app/styles/Hero.module.scss
@@ -56,6 +56,12 @@
   animation-fill-mode: forwards;
 }
 
+.hiddenText {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
 @keyframes fadeInAnimation {
   0% {
       opacity: 0;
